--- a/_templates/header.html
+++ b/_templates/header.html
@@ -3,17 +3,16 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/branding/logo/logo-white.png" alt="Blitz Media Logo">
+                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
                 </a>
-
                 <a class="nav" href="/#services">
-                    Services
+                    Home
                 </a>
                 <a class="nav" href="/portfolio/">
-                    Portfolio
+                    Over ons
                 </a>
                 <a class="nav" href="/blog/">
-                    Blog
+                    Gallerij
                 </a>
                 <a href="/#contact" class="btn white">
                     Contacteer ons
@@ -24,7 +23,7 @@
         <div class="topnav-content-sm">
             <div class="header-col">
                 <a href="/">
-                    <img class="logo" src="/branding/logo/logo-white.png" alt="Blitz Media Logo">
+                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
                 </a>
             </div>
             <div class="header-col">
@@ -36,13 +35,13 @@
         <div class="small-menu-wrapper">
             <div class="small-menu-content">
                 <a class="nav" href="/#services">
-                    Services
+                    Home
                 </a>
                 <a class="nav" href="/portfolio/">
-                    Portfolio
+                    Over ons
                 </a>
                 <a class="nav" href="/blog/">
-                    Blog
+                    Gallerij
                 </a>
                 <a href="/#contact" class="btn white">
                     Contacteer ons
