--- a/index.html
+++ b/index.html
@@ -11,10 +11,143 @@
 
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/header-footer.css">
+    
+    <link rel="stylesheet" href="/home/css/style.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
+<header>
+    <div class="section header" id="header">
+        <div class="row">
+            <div class="container">
+                <a class="nav-logo" href="/">
+                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
+                </a>
+                <a class="nav" href="/#services">
+                    Home
+                </a>
+                <a class="nav" href="/portfolio/">
+                    Over ons
+                </a>
+                <a class="nav" href="/blog/">
+                    Gallerij
+                </a>
+                <a href="/#contact" class="btn white">
+                    Contacteer ons
+                </a>
+            </div>
+        </div>
+
+        <div class="topnav-content-sm">
+            <div class="header-col">
+                <a href="/">
+                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
+                </a>
+            </div>
+            <div class="header-col">
+                <a class="icon" id="menu-toggle">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+                </a>
+            </div>
+        </div>
+        <div class="small-menu-wrapper">
+            <div class="small-menu-content">
+                <a class="nav" href="/#services">
+                    Home
+                </a>
+                <a class="nav" href="/portfolio/">
+                    Over ons
+                </a>
+                <a class="nav" href="/blog/">
+                    Gallerij
+                </a>
+                <a href="/#contact" class="btn white">
+                    Contacteer ons
+                </a>
+            </div>
+        </div>
+
+    </div>
+</header>
+
+<div class="section banner">
+    <div class="row flex-col">
+        <h1>
+            This is our main title
+        </h1>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga vel non rerum odit debitis, maxime similique totam eius expedita nobis magnam quo ratione ducimus repellendus maiores voluptate nostrum quia quas.
+        </p>
+        <a href="#contact" class="btn ghost white">
+            Neem contact op
+        </a>
+    </div>
+    <div class="overlay"></div>
+</div>
+
+<div class="section about">
+    <div class="row">
+        <div class="col">
+            <img src="" alt="">
+        </div>
+        <div class="col">
+            <h2>
+                This is our second title
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa veritatis quod ipsum possimus fuga laborum quidem magni delectus? Suscipit iusto nobis porro qui eligendi veniam adipisci architecto tenetur fuga illo?
+            </p>
+            <a href="#contact" class="btn">
+                Contacteer ons
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="section gallery">
+    <div class="row flex-col">
+        <div class="wrapper" id="gallery-wrapper">
+
+        </div>
+    </div>
+</div>
+
+<div class="section contact" id="contact">
+    <div class="row">
+        <div class="col">
+            <div class="wrapper opening">
+                <h3>
+                    Openingsuren
+                </h3>
+                <p>
+                    Maandag - Zaterdag
+                    <br>
+                    07:00 - 15:00
+                </p>
+                <p>
+                    Zondag
+                    <br>
+                    07:00 - 12:00
+                </p>
+                <a href="" class="phone">
+                    0474 45 59 59
+                </a>
+            </div>
+        </div>
+        <div class="col">
+            <div class="form-wrapper">
+                <form action="https://formspree.io/f/mbjeonre" method="post" class="validate contact-form" target="_blank" novalidate>
+                    <input type="text" value="" name="FNAME" id="mce-FNAME" placeholder="Jouw naam*" required>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Emailadres*" required>
+                    <input type="text" value="" name="MESSAGE" id="mce-MESSAGE" placeholder="Uitleg over jouw project">
+                    <input type="submit" value="Verstuur➔" name="subscribe" id="mc-embedded-subscribe" class="btn">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
