--- a/_templates/header.html
+++ b/_templates/header.html
@@ -14,7 +14,7 @@
                 <a class="nav" href="/blog/">
                     Gallerij
                 </a>
-                <a href="/#contact" class="btn white">
+                <a href="/#contact" class="btn ghost white">
                     Contacteer ons
                 </a>
             </div>
