--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav" href="/blog/">
                     Gallerij
                 </a>
-                <a href="/#contact" class="btn white">
+                <a href="/#contact" class="btn ghost white">
                     Contacteer ons
                 </a>
             </div>
@@ -90,7 +90,7 @@
 <div class="section about">
     <div class="row">
         <div class="col">
-            <img src="" alt="">
+            <img src="/home/img/about.jpg" alt="">
         </div>
         <div class="col">
             <h2>
