--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                     07:00 - 12:00
                 </p>
                 <a href="" class="phone">
+                    <i class="fa fa-phone"></i>
                     0474 45 59 59
                 </a>
             </div>
@@ -150,7 +151,22 @@
 </div>
 
 
-
+<footer>
+    <div class="section footer" id="footer">
+        <div class="row">
+            <img src="/assets/logo/logo.png" alt="Logo" class="logo">
+            <p class="legal">
+                Copyright ©2023 Blitz Media
+                <br><br>
+                Kroonlaan 8, 0101
+                <br>
+                8400 Oostende
+                <br>
+                BE0685 966 875
+            </p>
+        </div>
+    </div>
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
