--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/header-footer.css">
     
     <link rel="stylesheet" href="/home/css/style.css">
+    <link rel="stylesheet" href="/home/css/slider.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -108,9 +109,37 @@
 
 <div class="section gallery">
     <div class="row flex-col">
-        <div class="wrapper" id="gallery-wrapper">
-
+        <div class="slider-container" item-display-d="4" item-display-t="3" item-display-m="1">
+            <div class="slider-width">
+                <div class="item">
+                    <img src="/home/img/gallery1.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/home/img/gallery2.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/home/img/gallery3.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/home/img/gallery4.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/home/img/gallery1.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/home/img/gallery2.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/home/img/gallery3.jpg" alt="">
+                </div>
+            </div>
         </div>
+        <button type="button" class="prev slider-nav" onclick="prev()">
+            xxx
+        </button>
+        <button type="button" class="next slider-nav" onclick="next()">
+            xxx
+        </button>
     </div>
 </div>
 
@@ -170,5 +199,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
+    <script src="/home/js/script.js"></script>
 </body>
 </html>
