--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
                 </div>
             </div>
         </div>
-        <button type="button" class="prev slider-nav" onclick="prev()">
-            xxx
-        </button>
-        <button type="button" class="next slider-nav" onclick="next()">
-            xxx
-        </button>
+        <div class="btn-wrapper">
+            <a class="prev slider-nav" onclick="prev()">
+                <i class="fa-solid fa-caret-left"></i>
+            </a>
+            <a class="next slider-nav" onclick="next()">
+                <i class="fa-solid fa-caret-right"></i>
+            </a>
+        </div>
     </div>
 </div>
 
