added branding and form code

--- a/_templates/header.html
+++ b/_templates/header.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
+                    <img class="logo" src="/assets/logo/logo.svg" alt="Logo">
                 </a>
                 <a class="nav" href="/#services">
                     Home
@@ -23,7 +23,7 @@
         <div class="topnav-content-sm">
             <div class="header-col">
                 <a href="/">
-                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
+                    <img class="logo" src="/assets/logo/logo.svg" alt="Logo">
                 </a>
             </div>
             <div class="header-col">
