--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <link rel="stylesheet" href="/home/css/slider.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 
@@ -24,7 +32,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
+                    <img class="logo" src="/assets/logo/logo.svg" alt="Logo">
                 </a>
                 <a class="nav" href="/#services">
                     Home
@@ -44,7 +52,7 @@
         <div class="topnav-content-sm">
             <div class="header-col">
                 <a href="/">
-                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
+                    <img class="logo" src="/assets/logo/logo.svg" alt="Logo">
                 </a>
             </div>
             <div class="header-col">
@@ -170,7 +178,7 @@
         </div>
         <div class="col">
             <div class="form-wrapper">
-                <form action="https://formspree.io/f/mbjeonre" method="post" class="validate contact-form" target="_blank" novalidate>
+                <form action="https://formspree.io/f/xvonbepr" method="post" class="validate contact-form" target="_blank" novalidate>
                     <input type="text" value="" name="FNAME" id="mce-FNAME" placeholder="Jouw naam*" required>
                     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Emailadres*" required>
                     <input type="text" value="" name="MESSAGE" id="mce-MESSAGE" placeholder="Uitleg over jouw project">
@@ -185,9 +193,9 @@
 <footer>
     <div class="section footer" id="footer">
         <div class="row">
-            <img src="/assets/logo/logo.png" alt="Logo" class="logo">
+            <img src="/assets/logo/logo.svg" alt="Logo" class="logo">
             <p class="legal">
-                Copyright ©2023 Blitz Media
+                Copyright ©2023
                 <br><br>
                 Kroonlaan 8, 0101
                 <br>
