--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="section footer" id="footer">
         <div class="row">
-            <img src="/assets/logo/logo.png" alt="Logo" class="logo">
+            <img src="/assets/logo/logo.svg" alt="Logo" class="logo">
             <p class="legal">
                 Copyright ©2023 Blitz Media
                 <br><br>
