--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a class="nav" href="/blog/">
                     Gallerij
                 </a>
-                <a href="/#contact" class="btn white">
+                <a href="/#contact" class="nav">
                     Contacteer ons
                 </a>
             </div>
@@ -132,7 +132,7 @@
                     <img src="/home/img/gallery4.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/home/img/gallery1.jpg" alt="">
+                    <img src="/home/img/gallery5.jpg" alt="">
                 </div>
                 <div class="item">
                     <img src="/home/img/gallery2.jpg" alt="">
