--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/logo.svg" alt="Logo">
+                    <img class="logo" src="/assets/logo/logo.jpg" alt="Logo">
                 </a>
                 <a class="nav" href="/#services">
                     Home
@@ -44,7 +44,7 @@
                     Gallerij
                 </a>
                 <a href="/#contact" class="btn ghost white">
-                    Contacteer ons
+                    Openingsuren
                 </a>
             </div>
         </div>
@@ -52,7 +52,7 @@
         <div class="topnav-content-sm">
             <div class="header-col">
                 <a href="/">
-                    <img class="logo" src="/assets/logo/logo.svg" alt="Logo">
+                    <img class="logo" src="/assets/logo/logo.jpg" alt="Logo">
                 </a>
             </div>
             <div class="header-col">
@@ -73,7 +73,7 @@
                     Gallerij
                 </a>
                 <a href="/#contact" class="nav">
-                    Contacteer ons
+                    Openingsuren
                 </a>
             </div>
         </div>
@@ -90,7 +90,7 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga vel non rerum odit debitis, maxime similique totam eius expedita nobis magnam quo ratione ducimus repellendus maiores voluptate nostrum quia quas.
         </p>
         <a href="#contact" class="btn ghost white">
-            Neem contact op
+            Openingsuren
         </a>
     </div>
     <div class="overlay"></div>
@@ -99,7 +99,7 @@
 <div class="section about">
     <div class="row">
         <div class="col">
-            <img src="/home/img/about.jpg" alt="">
+            <img class="bg-color" src="/home/img/about.jpg" alt="">
         </div>
         <div class="col">
             <h2>
@@ -179,10 +179,11 @@
         <div class="col">
             <div class="form-wrapper">
                 <form action="https://formspree.io/f/xvonbepr" method="post" class="validate contact-form" target="_blank" novalidate>
-                    <input type="text" value="" name="FNAME" id="mce-FNAME" placeholder="Jouw naam*" required>
-                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Emailadres*" required>
-                    <input type="text" value="" name="MESSAGE" id="mce-MESSAGE" placeholder="Uitleg over jouw project">
-                    <input type="submit" value="Verstuur➔" name="subscribe" id="mc-embedded-subscribe" class="btn">
+                    <input type="text" value="" name="FNAME" placeholder="Jouw naam*" required>
+                    <input type="email" value="" name="EMAIL" placeholder="Emailadres*" required>
+                    <input type="number" value="" name="PHONE" placeholder="GSM nummer*" required>
+                    <input type="text" value="" name="MESSAGE"placeholder="Uitleg over jouw project">
+                    <input type="submit" value="Verstuur➔" name="subscribe" class="btn">
                 </form>
             </div>
         </div>
@@ -193,7 +194,7 @@
 <footer>
     <div class="section footer" id="footer">
         <div class="row">
-            <img src="/assets/logo/logo.svg" alt="Logo" class="logo">
+            <img src="/assets/logo/logo.jpg" alt="Logo" class="logo">
             <p class="legal">
                 Copyright ©2023
                 <br><br>
