--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <input type="text" value="" name="FNAME" placeholder="Jouw naam*" required>
                     <input type="email" value="" name="EMAIL" placeholder="Emailadres*" required>
                     <input type="number" value="" name="PHONE" placeholder="GSM nummer*" required>
-                    <input type="text" value="" name="MESSAGE"placeholder="Uitleg over jouw project">
+                    <input type="text" value="" name="MESSAGE"placeholder="Jouw bericht">
                     <input type="submit" value="Verstuur➔" name="subscribe" class="btn">
                 </form>
             </div>
