--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Slager
+        Ambacht en traditie in een eigentijds jasje | By Hauspie
     </title>
     <meta name="description" content="">
 
@@ -84,10 +84,14 @@
 <div class="section banner">
     <div class="row flex-col">
         <h1>
-            This is our main title
+            Ambacht en traditie in een eigentijds jasje
         </h1>
         <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga vel non rerum odit debitis, maxime similique totam eius expedita nobis magnam quo ratione ducimus repellendus maiores voluptate nostrum quia quas.
+            We tillen de ambacht naar een hoger niveau. En dat proef je. 
+            <br>
+            Van het (h)eerlijke stuk vlees op je bord, onze verrukkelijke kip-aan-het-spit, tot de in huisgemaakte traiteurgerechten en fijne vleeswaren. 
+            <br><br>
+            100% verse producten van de hoogste kwaliteit, daar staan we voor. Persoonlijk door ons geslecteerd mét kennis van zaken. En dat komt de smaak van het vlees natuurlijk alleen maar ten goede. Met veel goesting verwelkomen we jou in onze slagerij.
         </p>
         <a href="#contact" class="btn ghost white">
             Openingsuren
@@ -103,10 +107,14 @@
         </div>
         <div class="col">
             <h2>
-                This is our second title
+                Meat us
             </h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa veritatis quod ipsum possimus fuga laborum quidem magni delectus? Suscipit iusto nobis porro qui eligendi veniam adipisci architecto tenetur fuga illo?
+                Château Briand by Hauspie, dat staat voor 3 generaties, 2 families en 1 passie. Generatie op generatie stroomt de passie voor het vlees door de aderen van onze familie.
+                <br><br>
+                De liefde voor het métier ontstond bij zowel Lize als Matthias van jongs af aan. In de beenhouwerij brengen we nu het beste van de twee werelden samen. De bekende beenhouwerij Château Briand in de Panne en de gerenommeerde West-Vlaamse vleesgroothandel Hauspie.
+                <br><br>
+                Versheid is bij ons de basis. Want de dieren worden door de grootvader grootgebracht op de familieboerderij. Zo kennen we het exacte traject dat jouw stuk vlees heeft afgelegd voor het op je bord terecht komt.
             </p>
             <a href="#contact" class="btn">
                 Contacteer ons
@@ -170,9 +178,13 @@
                     <br>
                     07:00 - 12:00
                 </p>
-                <a href="" class="phone">
+                <a href="tel:058 51 12 58" class="phone">
                     <i class="fa fa-phone"></i>
-                    0474 45 59 59
+                    058 51 12 58
+                </a>
+                <a href="mailto:chateaubriandbyhauspie@hotmail.com" class="phone">
+                    <i class="fa fa-envelope"></i>
+                    chateaubriandbyhauspie@hotmail.com
                 </a>
             </div>
         </div>
@@ -196,13 +208,11 @@
         <div class="row">
             <img src="/assets/logo/logo.jpg" alt="Logo" class="logo">
             <p class="legal">
-                Copyright ©2023
-                <br><br>
-                Kroonlaan 8, 0101
+                Leopold II-laan 12
                 <br>
-                8400 Oostende
+                8670 Oostduinkerke 
                 <br>
-                BE0685 966 875
+                BE0772.700.119
             </p>
         </div>
     </div>
