--- a/index.html
+++ b/index.html
@@ -127,27 +127,13 @@
     <div class="row flex-col">
         <div class="slider-container" item-display-d="4" item-display-t="3" item-display-m="1">
             <div class="slider-width">
-                <div class="item">
-                    <img src="/home/img/gallery1.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="/home/img/gallery2.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="/home/img/gallery3.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="/home/img/gallery4.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="/home/img/gallery5.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="/home/img/gallery2.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="/home/img/gallery3.jpg" alt="">
-                </div>
+                <img src="/home/img/gallery1.jpg" alt="">
+                <img src="/home/img/gallery2.jpg" alt="">
+                <img src="/home/img/gallery3.jpg" alt="">
+                <img src="/home/img/gallery4.jpg" alt="">
+                <img src="/home/img/gallery5.jpg" alt="">
+                <img src="/home/img/gallery2.jpg" alt="">
+                <img src="/home/img/gallery3.jpg" alt="">
             </div>
         </div>
         <div class="btn-wrapper">
@@ -186,6 +172,7 @@
                     <i class="fa fa-envelope"></i>
                     chateaubriandbyhauspie@hotmail.com
                 </a>
+                <div class="overlay"></div>
             </div>
         </div>
         <div class="col">
