--- a/index.html
+++ b/index.html
@@ -127,13 +127,17 @@
     <div class="row flex-col">
         <div class="slider-container" item-display-d="4" item-display-t="3" item-display-m="1">
             <div class="slider-width">
-                <img src="/home/img/gallery1.jpg" alt="">
-                <img src="/home/img/gallery2.jpg" alt="">
-                <img src="/home/img/gallery3.jpg" alt="">
-                <img src="/home/img/gallery4.jpg" alt="">
-                <img src="/home/img/gallery5.jpg" alt="">
-                <img src="/home/img/gallery2.jpg" alt="">
-                <img src="/home/img/gallery3.jpg" alt="">
+                <img src="/home/img/gallery1.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery2.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery3.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery4.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery5.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery6.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery7.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery8.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery9.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery10.jpg" alt="By Hauspie">
+                <img src="/home/img/gallery11.jpg" alt="By Hauspie">
             </div>
         </div>
         <div class="btn-wrapper">
