--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <div class="section gallery">
     <div class="row flex-col">
         <div class="slider-container" item-display-d="4" item-display-t="3" item-display-m="1">
-            <div class="slider-width">
+            <div class="slider-width" id="gallery-target">
                 <img src="/home/img/gallery1.jpg" alt="By Hauspie">
                 <img src="/home/img/gallery2.jpg" alt="By Hauspie">
                 <img src="/home/img/gallery3.jpg" alt="By Hauspie">
@@ -184,7 +184,7 @@
                 <form action="https://formspree.io/f/xvonbepr" method="post" class="validate contact-form" target="_blank" novalidate>
                     <input type="text" value="" name="FNAME" placeholder="Jouw naam*" required>
                     <input type="email" value="" name="EMAIL" placeholder="Emailadres*" required>
-                    <input type="number" value="" name="PHONE" placeholder="GSM nummer*" required>
+                    <input type="text" value="" name="PHONE" placeholder="GSM nummer*" required>
                     <input type="text" value="" name="MESSAGE"placeholder="Jouw bericht">
                     <input type="submit" value="Verstuur➔" name="subscribe" class="btn">
                 </form>
