--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 <a class="nav-logo" href="/">
                     <img class="logo" src="/assets/logo/logo.jpg" alt="Logo">
                 </a>
-                <a class="nav" href="/#services">
+                <a class="nav" href="/">
                     Home
                 </a>
-                <a class="nav" href="/portfolio/">
+                <a class="nav" href="#about/">
                     Over ons
                 </a>
-                <a class="nav" href="/blog/">
+                <a class="nav" href="#gallery">
                     Gallerij
                 </a>
                 <a href="/#contact" class="btn ghost white">
@@ -63,13 +63,13 @@
         </div>
         <div class="small-menu-wrapper">
             <div class="small-menu-content">
-                <a class="nav" href="/#services">
+                <a class="nav" href="/">
                     Home
                 </a>
-                <a class="nav" href="/portfolio/">
+                <a class="nav" href="#about">
                     Over ons
                 </a>
-                <a class="nav" href="/blog/">
+                <a class="nav" href="#gallery">
                     Gallerij
                 </a>
                 <a href="/#contact" class="nav">
@@ -77,7 +77,6 @@
                 </a>
             </div>
         </div>
-
     </div>
 </header>
 
@@ -100,7 +99,7 @@
     <div class="overlay"></div>
 </div>
 
-<div class="section about">
+<div class="section about" id="about">
     <div class="row">
         <div class="col">
             <img class="bg-color" src="/home/img/about.jpg" alt="">
@@ -123,7 +122,7 @@
     </div>
 </div>
 
-<div class="section gallery">
+<div class="section gallery" id="gallery">
     <div class="row flex-col">
         <div class="slider-container" item-display-d="4" item-display-t="3" item-display-m="1">
             <div class="slider-width" id="gallery-target">
