added opening hours

--- a/index.html
+++ b/index.html
@@ -158,14 +158,26 @@
                     Openingsuren
                 </h3>
                 <p>
-                    Maandag - Zaterdag
+                    <span class="bold">Maandag - Vrijdag</span>
                     <br>
-                    07:00 - 15:00
+                    08:00 - 13:00
+                    <br>
+                    14:00 - 18:30
                 </p>
                 <p>
-                    Zondag
+                    <span class="bold">Zaterdag</span>
                     <br>
-                    07:00 - 12:00
+                    08:00 - 17:30
+                </p>
+                <p>
+                    <span class="bold">Zondag</span>
+                    <br>
+                    08:00 - 12:30
+                </p>
+                <p>
+                    <span class="bold">Woensdag</span>
+                    <br>
+                    Gesloten
                 </p>
                 <a href="tel:058 51 12 58" class="phone">
                     <i class="fa fa-phone"></i>
