fixed mobile and header

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a class="nav" href="#gallery">
                     Gallerij
                 </a>
-                <a href="/#contact" class="nav">
+                <a href="#contact" class="nav">
                     Openingsuren
                 </a>
             </div>
