--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>
         Ambacht en traditie in een eigentijds jasje | By Hauspie
     </title>
-    <meta name="description" content="">
+    <meta name="description" content="an het (h)eerlijke stuk vlees op je bord, onze verrukkelijke kip-aan-het-spit, tot de in huisgemaakte traiteurgerechten en fijne vleeswaren.">
 
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/header-footer.css">
