--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/logo.jpg" alt="Logo">
+                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
                 </a>
                 <a class="nav" href="/">
                     Home
@@ -83,14 +83,16 @@
 <div class="section banner">
     <div class="row flex-col">
         <h1>
-            Ambacht en traditie in een eigentijds jasje
+            Ambacht. Traditie. Vlees.
         </h1>
         <p>
             We tillen de ambacht naar een hoger niveau. En dat proef je. 
             <br>
-            Van het (h)eerlijke stuk vlees op je bord, onze verrukkelijke kip-aan-het-spit, tot de in huisgemaakte traiteurgerechten en fijne vleeswaren. 
+            Van het (h)eerlijk stuk vlees op je bord, onze verrukkelijke kip-aan-het-spit, tot de in huisgemaakte traiteurgerechten en fijne vleeswaren. 
             <br><br>
-            100% verse producten van de hoogste kwaliteit, daar staan we voor. Persoonlijk door ons geslecteerd mét kennis van zaken. En dat komt de smaak van het vlees natuurlijk alleen maar ten goede. Met veel goesting verwelkomen we jou in onze slagerij.
+            100% verse producten van de hoogste kwaliteit, daar staan we voor. Persoonlijk door ons geslecteerd mét kennis van zaken. En dat komt de smaak van het vlees natuurlijk alleen maar ten goede.
+            <br><br>
+            Met veel goesting verwelkomen we jou in onze slagerij.
         </p>
         <a href="#contact" class="btn ghost white">
             Openingsuren
@@ -106,14 +108,18 @@
         </div>
         <div class="col">
             <h2>
-                Meat us
+                Let's MEAT.
             </h2>
             <p>
-                Château Briand by Hauspie, dat staat voor 3 generaties, 2 families en 1 passie. Generatie op generatie stroomt de passie voor het vlees door de aderen van onze familie.
+                Château Briand by Hauspie (komma weg) dat staat voor 3 generaties, 2 families en 1 passie. (spatie)
+                <br>
+                Generatie op generatie stroomt de passie voor het vlees door de aderen van onze familie. 
                 <br><br>
-                De liefde voor het métier ontstond bij zowel Lize als Matthias van jongs af aan. In de beenhouwerij brengen we nu het beste van de twee werelden samen. De bekende beenhouwerij Château Briand in de Panne en de gerenommeerde West-Vlaamse vleesgroothandel Hauspie.
+                De liefde voor het métier ontstond bij zowel Lize als Matthias van jongs af aan. In de beenhouwerij brengen we nu het beste van de twee werelden samen. (spatie)
+                <br>
+                De bekende beenhouwerij Château Briand in de Panne en de gerenommeerde West-Vlaamse vleesgroothandel Hauspie. 
                 <br><br>
-                Versheid is bij ons de basis. Want de dieren worden door de grootvader grootgebracht op de familieboerderij. Zo kennen we het exacte traject dat jouw stuk vlees heeft afgelegd voor het op je bord terecht komt.
+                Versheid is bij ons de basis. Want de dieren worden door de grootvader grootgebracht op de familieboerderij. Zo kennen we het exacte traject dat jouw stuk vlees heeft afgelegd voor het op je bord terechtkomt.
             </p>
             <a href="#contact" class="btn">
                 Contacteer ons
@@ -133,7 +139,6 @@
                 <img src="/home/img/gallery5.jpg" alt="By Hauspie">
                 <img src="/home/img/gallery6.jpg" alt="By Hauspie">
                 <img src="/home/img/gallery7.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery8.jpg" alt="By Hauspie">
                 <img src="/home/img/gallery9.jpg" alt="By Hauspie">
                 <img src="/home/img/gallery10.jpg" alt="By Hauspie">
                 <img src="/home/img/gallery11.jpg" alt="By Hauspie">
@@ -204,11 +209,10 @@
     </div>
 </div>
 
-
 <footer>
     <div class="section footer" id="footer">
         <div class="row">
-            <img src="/assets/logo/logo.jpg" alt="Logo" class="logo">
+            <img src="/assets/logo/logo.png" alt="Logo" class="logo">
             <p class="legal">
                 Leopold II-laan 12
                 <br>
