--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                 Let's MEAT.
             </h2>
             <p>
-                Château Briand by Hauspie (komma weg) dat staat voor 3 generaties, 2 families en 1 passie. (spatie)
+                Château Briand by Hauspie dat staat voor 3 generaties, 2 families en 1 passie.
                 <br>
                 Generatie op generatie stroomt de passie voor het vlees door de aderen van onze familie. 
                 <br><br>
-                De liefde voor het métier ontstond bij zowel Lize als Matthias van jongs af aan. In de beenhouwerij brengen we nu het beste van de twee werelden samen. (spatie)
+                De liefde voor het métier ontstond bij zowel Lize als Matthias van jongs af aan. In de beenhouwerij brengen we nu het beste van de twee werelden samen.
                 <br>
                 De bekende beenhouwerij Château Briand in de Panne en de gerenommeerde West-Vlaamse vleesgroothandel Hauspie. 
                 <br><br>
